[workspace]

members = [
  "tower",
  "tower-layer",
  "tower-service",
  "tower-test",
]

[workspace.dependencies]
futures = "0.3.22"
futures-core = "0.3.22"
futures-util = { version = "0.3.22", default-features = false }
hdrhistogram = { version = "7.0", default-features = false }
http = "1"
indexmap = "2.0.2"
lazy_static = "1.4.0"
pin-project-lite = "0.2.7"
quickcheck = "1"
rand = "0.8"
slab = "0.4"
sync_wrapper = "1"
tokio = "1.32.1"
tokio-stream = "0.1.0"
tokio-test = "0.4"
tokio-util = { version = "0.7.0", default-features = false }
tracing = { version = "0.1.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
