[package]
name = "tower-balance"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-balance/0.1.0"
description = """
Balance load across a set of uniform services.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"
publish = false

[features]
log = ["tracing/log"]
default = ["log"]

[dependencies]
futures = "0.1.26"
indexmap = "1.0.2"
tracing = "0.1"
rand = "0.6.5"
tokio-sync = "0.1.3"
tokio-timer = "0.2.4"
tower-discover = "0.1.0"
tower-layer = "0.1.0"
tower-load = { version = "0.1.0", path = "../tower-load" }
tower-service = "0.2.0"
tower-util = "0.1.0"
slab = "0.4"

[dev-dependencies]
tracing-subscriber = "0.1.3"
hdrhistogram = "6.0"
quickcheck = { version = "0.6", default-features = false }
tokio = "0.1.7"
tokio-executor = "0.1.2"
tower = { version = "*", path = "../tower" }
tower-buffer = { version = "*", path = "../tower-buffer" }
tower-limit = { version = "*", path = "../tower-limit" }
tower-test = { version = "*", path = "../tower-test" }
