[package]
name = "tower-balance"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.2"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-balance/0.3.0-alpha.2"
description = """
Balance load across a set of uniform services.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[features]
log = ["tracing/log"]
default = ["log"]

[dependencies]
futures-util-preview = "=0.3.0-alpha.19"
futures-core-preview = "=0.3.0-alpha.19"
pin-project = "0.4"
indexmap = "1.0.2"
tracing = "0.1"
rand = "0.6.5"
tokio-sync = "=0.2.0-alpha.6"
tokio-timer = "=0.3.0-alpha.6"
tower-discover = { version = "=0.3.0-alpha.2", path = "../tower-discover" }
tower-layer = { version = "=0.3.0-alpha.2", path = "../tower-layer" }
tower-load = { version = "=0.3.0-alpha.2", path = "../tower-load" }
tower-service = { version = "=0.3.0-alpha.2", path = "../tower-service" }
tower-make = { version = "=0.3.0-alpha.2a", path = "../tower-make" }
slab = "0.4"

[dev-dependencies]
tracing-subscriber = "0.1.1"
hdrhistogram = "6.0"
quickcheck = { version = "0.6", default-features = false }
tokio = "=0.2.0-alpha.6"
tokio-executor = "=0.2.0-alpha.6"
tokio-test = "=0.2.0-alpha.6"
tower-buffer = { version = "=0.3.0-alpha.2", path = "../tower-buffer" }
tower-limit = { version = "=0.3.0-alpha.2", path = "../tower-limit" }
tower-test = { version = "=0.3.0-alpha.2", path = "../tower-test" }
tower = { version = "=0.3.0-alpha.2", path = "../tower" }
