[package]
name = "tower-balance"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-balance/0.3.0"
description = """
Balance load across a set of uniform services.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[features]
log = ["tracing/log"]
default = ["log"]

[dependencies]
futures-util = { version = "0.3", default-features = false } 
futures-core = { version = "0.3", default-features = false }
pin-project = "0.4"
indexmap = "1.0.2"
tracing = "0.1"
rand = { version = "0.7", features = ["small_rng"] } 
tokio = { version = "0.2", features = ["sync", "time"] }
tower-discover = { version = "0.3", path = "../tower-discover" }
tower-layer = "0.3"
tower-load = { version = "0.3", path = "../tower-load" }
tower-service = "0.3"
tower-ready-cache = { version = "0.3", path = "../tower-ready-cache" }
tower-make = "0.3"
slab = "0.4"

[dev-dependencies]
tracing-subscriber = "0.1.1"
hdrhistogram = "6.0"
quickcheck = { version = "0.6", default-features = false }
tokio = { version = "0.2", features = ["macros", "stream"] }
tokio-test = "0.2"
tower-buffer = { version = "0.3", path = "../tower-buffer" }
tower-limit = { version = "0.3", path = "../tower-limit" }
tower-test = { version = "0.3", path = "../tower-test" }
tower = { version = "0.3", path = "../tower" }
