[package]
name = "tower-buffer"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.1"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-buffer/0.3.0-alpha.1"
description = """
Buffer requests before dispatching to a `Service`.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[features]
log = ["tracing/log"]
default = ["log"]

[dependencies]
futures-core-preview = "=0.3.0-alpha.18"
pin-project = { version = "=0.4.0-alpha.11", features = ["project_attr"] }
tower-service = "=0.3.0-alpha.1"
tower-layer = { version = "=0.3.0-alpha.1", path = "../tower-layer" }
tokio-executor = "=0.2.0-alpha.4"
tokio-sync = "=0.2.0-alpha.4"
tracing = "0.1.2"

[dev-dependencies]
tower-test = { version = "=0.3.0-alpha.1", path = "../tower-test" }
tokio-test = { version = "=0.2.0-alpha.4" }
futures-util-preview = "=0.3.0-alpha.18"
