[package]
name = "tower-buffer"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-buffer/0.3.0"
description = """
Buffer requests before dispatching to a `Service`.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[features]
log = ["tracing/log"]
default = ["log"]

[dependencies]
futures-core = { version = "0.3", default-features = false }
pin-project = "0.4"
tower-service = "0.3"
tower-layer = "0.3"
tokio = { version = "0.2", features = ["rt-core", "sync"] }
tracing = "0.1.2"

[dev-dependencies]
tower-test = { version = "0.3", path = "../tower-test" }
tokio-test = { version = "0.2" }
tokio = { version = "0.2", features = ["macros"] }
