[package]
name = "tower-discover"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-discover/0.3.0"
description = """
Abstracts over service discovery strategies.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
futures-core = { version = "0.3", default-features = false }
tower-service = "0.3"
pin-project = "0.4"
