[package]
name = "tower-filter"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.1"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-filter/0.3.0-alpha.1"
description = """
Conditionally allow requests to be dispatched to a service based on the result
of a predicate.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"
publish = false

[dependencies]
tower-service = "=0.3.0-alpha.1"
tower-layer = { version = "=0.3.0-alpha.1", path = "../tower-layer" }
pin-project = { version = "=0.4.0-alpha.11", features = ["project_attr"] }
futures-core-preview = "=0.3.0-alpha.18"

[dev-dependencies]
tower-test = { version = "=0.3.0-alpha.1", path = "../tower-test" }
tokio-test = "=0.2.0-alpha.4"
tokio = "=0.2.0-alpha.4"
futures-util-preview = "=0.3.0-alpha.18"
