[package]
name = "tower-hedge"
version = "0.1.0"
authors = ["Alex Leong <adlleong@gmail.com>"]
publish = false

[dependencies]
futures = "0.1"
hdrhistogram = "6.0"
log = "0.4.1"
tokio-timer = "0.2.6"
tower-filter = { version = "0.1", path = "../tower-filter" }
tower-service = "0.2.0"

[dev-dependencies]
tokio-executor = "0.1.2"
tokio-mock-task = { git = "https://github.com/carllerche/tokio-mock-task" }
tower-test = { version = "0.1", path = "../tower-test" }
