[package]
name = "tower-hedge"
version = "0.3.0"
authors = ["Alex Leong <adlleong@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
hdrhistogram = "6.0"
log = "0.4.1"
tower-service = { version = "0.3", path = "../tower-service" }
tower-filter = { version = "0.3", path = "../tower-filter" }
tokio = { version = "0.2", features = ["time"] }
futures-util = "0.3"
pin-project = "0.4"

[dev-dependencies]
tower-test = { version = "0.3", path = "../tower-test" }
tokio-test = "0.2"
tokio = { version = "0.2", features = ["macros", "test-util"] }