[package]
name = "tower-hedge"
version = "0.3.0"
authors = ["Alex Leong <adlleong@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
hdrhistogram = "6.0"
log = "0.4.1"
tower-service = "0.3"
tower-filter = { version = "0.3", path = "../tower-filter" }
tokio = { version = "0.2", features = ["time"] }
futures-util = { version = "0.3", default-features = false }
pin-project = "0.4"

[dev-dependencies]
tower-test = { version = "0.3", path = "../tower-test" }
tokio-test = "0.2"
tokio = { version = "0.2", features = ["macros", "test-util"] }