[package]
name = "tower-in-flight-limit"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
futures = "0.1"
tower-service = { version = "0.2", path = "../tower-service" }
tower-middleware = { version = "0.1", path = "../tower-middleware" }

[dev-dependencies]
tokio-test = { git = "https://github.com/carllerche/tokio-test" }
tower-mock = { version = "0.1", path = "../tower-mock" }
