[package]
name = "tower-in-flight-limit"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
futures = "0.1"
tower-service = "0.2.0"
tower-layer = { version = "0.1", path = "../tower-layer" }

[dev-dependencies]
tokio-test = { git = "https://github.com/carllerche/tokio-test" }
tower-mock = { version = "0.1", path = "../tower-mock" }
