[package]
name = "tower-in-flight-limit"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
futures = "0.1.25"
tokio-sync = "0.1.3"
tower-service = "0.2.0"
tower-layer = { version = "0.1.0", path = "../tower-layer" }

[dev-dependencies]
tokio-mock-task = "0.1.1"
tower-mock = { version = "0.1", path = "../tower-mock" }
