[package]
name = "tower-limit"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.3.x" git tag.
version = "0.3.1"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-limit/0.3.1"
description = """
Limit maximum request rate to a `Service`.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
futures-core = { version = "0.3", default-features = false }
tower-service = "0.3"
tower-layer = "0.3"
tower-load = "0.3"
tokio = { version = "0.2", features = ["time"] }
pin-project = "0.4"

[dev-dependencies]
tower-test = { version = "0.3", path = "../tower-test" }
tokio-test = "0.2"
tokio = { version = "0.2", features = ["macros", "test-util"] }
