[package]
name = "tower-load-shed"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-load-shed/0.3.0"
description = """
Immediately reject requests if the inner service is not ready. This is also
known as load-shedding.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
tower-service = "0.3"
tower-layer = "0.3"
pin-project = "0.4"
futures-core = { version = "0.3", default-features = false }

[dev-dependencies]
tokio-test = "0.2"
tower-test = { version = "0.3", path = "../tower-test" }
tokio = { version = "0.2", features = ["macros"] }