[package]
name = "tower-load"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-load/0.1.0"
description = """
Strategies for measuring the load of a service
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"
publish = false

[dependencies]
tracing = "0.1"
tokio-timer = "0.3.0-alpha.4"
tower-service = "0.3.0-alpha.1"
tower-discover = { path = "../tower-discover" }
futures-core-preview = "=0.3.0-alpha.18"
pin-project = "0.4.0-alpha.7"

# [dev-dependencies]
# tokio-executor = "0.1.2"
