[package]
name = "tower-load"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.1"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-load/0.3.0-alpha.1"
description = """
Strategies for measuring the load of a service
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
futures-core-preview = "=0.3.0-alpha.19"
log = "0.4.1"
tokio-timer = "=0.3.0-alpha.5"
tower-service = "=0.3.0-alpha.1"
tower-discover = { version = "=0.3.0-alpha.1", path = "../tower-discover" }
pin-project = "0.4"

[dev-dependencies]
tokio-test = "=0.2.0-alpha.5"
futures-util-preview = "=0.3.0-alpha.19"
