[package]
name = "tower-load"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-load/0.3.0-alpha.2"
description = """
Strategies for measuring the load of a service
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
futures-core = { version = "0.3", default-features = false }
log = "0.4.1"
tokio = { version = "0.2", features = ["time"] }
tower-service = "0.3"
tower-discover = { version = "0.3", path = "../tower-discover" }
pin-project = "0.4"

[dev-dependencies]
tokio-test = "0.2"
tokio = { version = "0.2", features = ["macros", "test-util" ] }
futures-util = { version = "0.3", default-features = false }
