[package]
name = "tower-make"
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-make/0.3.0-alpha.2"
description = """
Trait aliases for Services that produce specific types of Responses.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[features]
io = ["tokio"]

[dependencies]
# we don't use any of the possibly unstable io bits, so we can be loose
# about the exact alpha version
tokio = { version = "0.2.1", optional = true }
tower-service = { version = "0.3.0", path = "../tower-service" }
