[package]
name = "tower-make"
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-make/0.3.0"
description = """
Trait aliases for Services that produce specific types of Responses.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[features]
connect = ["tokio"]

[dependencies]
tower-service = { version = "0.3", path = "../tower-service" }
tokio = { version = "0.2", optional = true }
