[package]
name = "tower-map"
version = "0.1.0"
authors = ["Dru Sellers <dru@drusellers.com>"]
license = "MIT"
publish = false
edition = "2018"

[dependencies]
futures = "0.1"
tower-service = "0.2.0"
tower-layer = { version = "0.1", path = "../tower-layer" }

[dev-dependencies]
tower-test = { version = "0.1", path = "../tower-test" }
tokio-executor = "0.1.2"
