[package]
name = "tower-rate-limit"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
futures = "0.1"
tower-service = "0.2.0"
tower-layer = { version = "0.1", path = "../tower-layer"}
tokio-timer = "0.2.6"

[dev-dependencies]
tower-test = { version = "0.1", path = "../tower-test" }
tokio = "0.1"
