[package]
name = "tower-ready-cache"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-ready-cache/0.1.0"
description = """
Caches a set of services
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
indexmap = "1.0.2"
log = "0.4.1"
tokio = { version = "0.2", features = ["sync"] } 
tower-service = "0.3"

[dev-dependencies]
tower-test = { version = "0.3", path = "../tower-test" }
tokio-test = "0.2"

