[package]
name = "tower-reconnect"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
log = "0.4.1"
futures = "0.1.26"
tower-service = "0.2.0"
tower-util = "0.1.0"
