[package]
name = "tower-reconnect"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-reconnect/0.3.0-alpha.2"
description = """
Automatically recreate a new `Service` instance when an error is encountered.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
log = "0.4.1"
tower-service = "0.3"
tower-make = "0.3"
pin-project = "0.4"
