[package]
name = "tower-retry"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-retry/0.1.0"
description = """
Retry failed requests.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
futures = "0.1.26"
tower-service = "0.2.0"
tower-layer = "0.1.0"
tokio-timer = "0.2.4"

[dev-dependencies]
tower-test = { version = "0.1.0", path = "../tower-test" }
tokio-executor = "0.1.2"
